# bookkeeper_webapp

./: README.md  dev.py  pyproject.toml
app/: binders.py  settings.py
domain/: common.py
