[tool.poetry]
name = "bookkeper-webapp"
version = "0.1.0"
description = ""
authors = ["Skirda Matvei <skirdamatvei@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blacksheep = {extras = ["full"], version = "^2.0.7"}
uvicorn = "^0.29.0"
uvloop = "^0.19.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
msgspec = "^0.18.6"
socketify = "^0.0.27"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
blacksheep-cli = "^0.0.4"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-randomly = "^3.15.0"
mimesis = "^15.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
